# RevGame

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  start.sh
crates/revgame-core/: Cargo.toml
crates/revgame-core/src/: lib.rs
crates/revgame-core/src/debugger/: bookmarks.rs  execution.rs  history.rs  mod.rs  search.rs
crates/revgame-core/src/emulator/: cpu.rs  decoder.rs  flags.rs  instructions.rs  memory.rs  mod.rs
crates/revgame-core/src/game/: achievements.rs  mod.rs  save.rs  state.rs
crates/revgame-core/src/puzzle/: list.rs  loader.rs  mod.rs  types.rs  validator.rs
crates/revgame-core/src/reference/: mod.rs
crates/revgame-native/: Cargo.toml
crates/revgame-native/src/: main.rs
crates/revgame-ui/: Cargo.toml
crates/revgame-ui/src/: app.rs  lib.rs  syntax.rs  theme.rs  tutorial.rs
crates/revgame-ui/src/screens/: achievements.rs  bookmarks.rs  debugger.rs  mod.rs  puzzle_select.rs  reference.rs  search.rs
crates/revgame-ui/src/widgets/: disasm_view.rs  memory_view.rs  mod.rs  register_view.rs  rewind_effect.rs  stack_view.rs  tutorial_overlay.rs
crates/revgame-web/: Cargo.toml
crates/revgame-web/src/: lib.rs
puzzles/01-basics/: 001-first-patch.toml  002-change-the-value.toml  003-jump-reversal.toml  004-force-the-jump.toml  005-nop-sled.toml
puzzles/02-control-flow/: 001-double-check.toml  002-loop-counter.toml  003-stack-setup.toml  004-flag-check.toml  005-arithmetic-check.toml  006-counter-trick.toml
puzzles/03-crackmes/: 001-simple-serial.toml  002-xor-decrypt.toml  003-multi-stage.toml
puzzles/04-strings/: 001-strcmp.toml
puzzles/05-arrays/: 001-array-sum.toml
