[workspace]
resolver = "2"
members = [
    "crates/revgame-core",
    "crates/revgame-ui",
    "crates/revgame-native",
    # "crates/revgame-web",  # TODO: Re-enable when ratzilla/ratatui versions are compatible
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core disassembly
iced-x86 = { version = "1.21", default-features = false, features = ["decoder", "intel", "std"] }

# TUI framework
ratatui = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Internal crates
revgame-core = { path = "crates/revgame-core" }
revgame-ui = { path = "crates/revgame-ui" }
