[package]
name = "revgame-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core game logic, x86 emulator, and puzzle system for RevGame"

[dependencies]
iced-x86.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
